--- a/src/app/__layout/layout.html
+++ b/src/app/__layout/layout.html
@@ -3,38 +3,38 @@
     <nz-row nzJustify="space-between" nzAlign="middle">
       <nz-col>
         <ul class="navigation" nz-menu nzMode="horizontal">
-          <li nz-menu-item>
-            <a [routerLink]="['/jobs']">
+          <li nz-menu-item nzMatchRouter>
+            <a [routerLink]="['/dashboard']">
               <nz-icon nzType="dashboard"></nz-icon>
               工作台
             </a>
           </li>
-          <li nz-menu-item>
-            <a [routerLink]="['/jobs']">
+          <li nz-menu-item nzMatchRouter>
+            <a [routerLink]="['/products']">
               <nz-icon nzType="shopping"></nz-icon>
               商品
             </a>
           </li>
-          <li nz-menu-item>
-            <a [routerLink]="['/jobs']">
+          <li nz-menu-item nzMatchRouter>
+            <a [routerLink]="['/orders']">
               <nz-icon nzType="file-text"></nz-icon>
               订单
             </a>
           </li>
-          <li nz-menu-item>
-            <a [routerLink]="['/jobs']">
+          <li nz-menu-item nzMatchRouter>
+            <a [routerLink]="['/customers']">
               <nz-icon nzType="team"></nz-icon>
               客户
             </a>
           </li>
-          <li nz-menu-item>
-            <a [routerLink]="['/jobs']">
+          <li nz-menu-item nzMatchRouter>
+            <a [routerLink]="['/analytics']">
               <nz-icon nzType="bar-chart"></nz-icon>
               数据
             </a>
           </li>
-          <li nz-menu-item>
-            <a [routerLink]="['/jobs']">
+          <li nz-menu-item nzMatchRouter>
+            <a [routerLink]="['/settings']">
               <nz-icon nzType="setting"></nz-icon>
               系统
             </a>
