--- a/src/app/settings/access/views/routes/routes.html
+++ b/src/app/settings/access/views/routes/routes.html
@@ -6,122 +6,83 @@
         <nz-icon nzType="close" />
       </button>
     }
-
-    <app-keyword *nzSpaceItem [appModel]="m" (appOnSearch)="getData(true)"></app-keyword>
-    <app-toolbox *nzSpaceItem [appModel]="m" (appRefresh)="getData(true)" (appClear)="getData(true)"></app-toolbox>
   </nz-space>
 </ng-template>
 <ng-template #right>
   <nz-space nzAlign="center">
-    <a nz-dropdown *nzSpaceItem [nzDropdownMenu]="bulkAction" [nzDisabled]="m.selection().size === 0">
-      已选择 {{ m.selection().size }} 个项目
-      <nz-icon nzType="down" />
-    </a>
-    <nz-dropdown-menu #bulkAction>
-      <ul nz-menu nzSelectable>
-        <li nz-menu-item nzDanger (click)="bulkDelete()">删除</li>
-        <li nz-menu-item (click)="m.clearSelections()">取消选择</li>
-      </ul>
-    </nz-dropdown-menu>
-
     <button *nzSpaceItem nz-button nzType="primary" (click)="openGroup()">新增分组</button>
   </nz-space>
 </ng-template>
 
 <nz-card style="height: 100%" [nzBordered]="false" [nzTitle]="left" [nzExtra]="right">
-  <nz-table
-    #tb
-    [style.height.%]="100"
-    [nzLoading]="m.loading()"
-    [nzData]="m.data()"
-    [nzTotal]="m.total()"
-    [nzFrontPagination]="false"
-    [nzShowPagination]="true"
-    [nzShowSizeChanger]="true"
-    [nzPageSizeOptions]="[10, 20, 50]"
-    [(nzPageIndex)]="m.page"
-    [(nzPageSize)]="m.pagesize"
-    (nzPageIndexChange)="getData()"
-    (nzPageSizeChange)="getData()"
+  <nz-tree
+    #nzTree
+    nzBlockNode
+    [nzData]="nodes()"
+    [nzShowExpand]="false"
+    [nzTreeTemplate]="treeRef"
+    (nzContextMenu)="actions($event, menu)"
   >
-    <thead>
-      <tr>
-        <th
-          nzLeft
-          nzAlign="center"
-          nzWidth="50px"
-          [nzChecked]="m.checked()"
-          [nzIndeterminate]="m.indeterminate()"
-          (nzCheckedChange)="m.setCurrentSelections($event)"
-        ></th>
-        <th nzLeft="50px" nzWidth="50px" nzAlign="center">
-          <button nz-button nzType="text" nz-tooltip="排序">
-            <nz-icon nzType="holder" />
-          </button>
-        </th>
-        <th nzWidth="160px"><app-title>路由名称</app-title></th>
-        <th nzWidth="160px"><app-title>路由类型</app-title></th>
-        <th><app-title>链接</app-title></th>
-        <th nzAlign="center" nzWidth="100px">
-          <app-title>状态</app-title>
-        </th>
-        <th nzRight nzAlign="center" nzWidth="50px">
-          <button nz-button nzType="text" nz-tooltip="操作">
-            <nz-icon nzType="setting" />
-          </button>
-        </th>
-      </tr>
-    </thead>
-    <tbody>
-      @for (data of tb.data; track data.id) {
-        <tr>
-          <td
-            nzLeft
-            nzAlign="center"
-            [nzChecked]="m.selection().has(data.id)"
-            (nzCheckedChange)="$event ? m.setSelection(data) : m.removeSelection(data.id)"
-          ></td>
-          <td nzLeft="50px" nzAlign="center">
-            <button nz-button nzType="text">
-              <nz-icon nzType="holder" />
-            </button>
-          </td>
-          <td>
-            @if (data.icon) {
-              <nz-icon [nzType]="data.icon"></nz-icon>
-            }
-            {{ data.name }}
-          </td>
-          <td>{{ routes.typeM[data.type] }}</td>
-          <td>
-            @if (data.type !== 1) {
-              {{ data.link }}
-            } @else {
-              无
-            }
-          </td>
-          <td nzAlign="center">
-            <app-active [appValue]="data.active"></app-active>
-          </td>
-          <td nzRight nzAlign="center">
-            <button nz-button nzType="text" nz-dropdown [nzDropdownMenu]="actions">
-              <nz-icon nzType="ellipsis" />
-            </button>
-            <nz-dropdown-menu #actions>
-              <ul nz-menu>
-                @if (data.type === 1) {
-                  <li nz-menu-item (click)="open(data.id)">新增路由</li>
-                  <li nz-menu-item (click)="openGroup(data)">修改</li>
-                } @else {
-                  <li nz-menu-item (click)="open(data.pid, data)">修改</li>
-                }
-                <li nz-menu-divider></li>
-                <li nz-menu-item nzDanger (click)="delete(data)">删除</li>
-              </ul>
-            </nz-dropdown-menu>
-          </td>
-        </tr>
-      }
-    </tbody>
-  </nz-table>
+  </nz-tree>
 </nz-card>
+
+<ng-template #treeRef let-node>
+  @let data = routeM()[node.key];
+  @if (data) {
+    <nz-row style="border: 1px #dedede dashed" nzJustify="space-between" nzAlign="middle" nzGutter="16">
+      <nz-col>
+        <span class="menu-item">
+          @if (data.type === 1) {
+            <nz-icon
+              style="color: #1890ff"
+              [nzType]="!node.isExpanded ? 'plus-circle' : 'minus-circle'"
+              (click)="expand(node)"
+            />
+          }
+
+          @if (data.type === 2 && data.icon) {
+            <nz-icon [nzType]="data.icon" />
+          }
+
+          <span class="menu-title">
+            {{ data.name }}
+          </span>
+
+          @if (data.link) {
+            <a class="menu-link" target="_blank" nz-typography nzCopyable [nzCopyText]="data.link">
+              {{ data.link }}
+            </a>
+          }
+        </span>
+      </nz-col>
+      <nz-col></nz-col>
+      <nz-col>
+        @if (!data.active) {
+          <nz-tag nzColor="red">已禁用</nz-tag>
+        }
+        <nz-tag>
+          {{ routes.typeM[data.type] }}
+        </nz-tag>
+        <nz-tag nzColor="blue"> 设置 {{ 0 }} 规则 </nz-tag>
+      </nz-col>
+    </nz-row>
+  }
+</ng-template>
+
+<nz-dropdown-menu #menu>
+  @let selecedData = selected();
+  @if (selecedData) {
+    <ul nz-menu>
+      <li nz-menu-item nzDisabled>{{ selecedData.name }}</li>
+      <li nz-menu-divider></li>
+      @if (selecedData.type === 1) {
+        <li nz-menu-item (click)="open(undefined, selecedData.id)"> 新增路由</li>
+        <li nz-menu-item (click)="openGroup(selecedData)"> 修改</li>
+      } @else {
+        <li nz-menu-item (click)="open(selecedData)"> 修改</li>
+      }
+
+      <li nz-menu-item nzDanger (click)="delete(selecedData)"> 删除</li>
+    </ul>
+  }
+</nz-dropdown-menu>
